feat: impl callback api
